# pos

./: .editorconfig  .env.example  .gitignore  .npmrc  AGENTS.md  README.md  ecosystem.config.cjs  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  security.yml
apps/admin/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/api/: package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/api/src/: app.test.ts  app.ts  context.ts  crypto.ts  env.ts  index.ts  logger.ts  openapi.ts  queues.ts  redis.ts  sentry.ts
apps/marketing/: package.json  tailwind.config.ts  tsconfig.json
apps/ml/: Dockerfile  package.json  pyproject.toml
apps/ml/src/desain_ml/: __init__.py  anomaly.py  forecast.py  main.py  menu_score.py
apps/pos/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/pos/src/: App.tsx  main.tsx  styles.css
apps/worker/: package.json
apps/worker/src/: index.ts  logger.ts  queues.ts  redis.ts  schedules.ts
docs/: FEATURE-WALKTHROUGH.md  STATUS-2026-04-27.md
docs/architecture/adr/: 0001-monorepo-pnpm-turborepo.md  0002-postgres-rls-multi-tenancy.md  0003-sync-engine-outbox-not-crdt.md  0004-modular-pricing-feature-flags.md  0005-money-bigint-sen.md
e2e/: README.md  package.json  playwright.config.ts  tsconfig.json
infra/docker/: Dockerfile.api  Dockerfile.worker  docker-compose.prod.yml  docker-compose.yml  init-db.sql
infra/scripts/: adr-new.mjs  backup.sh
scripts/: deploy-vps.sh
(+133 files in other folders)
